validation in progress

--- a/src/home.html
+++ b/src/home.html
@@ -65,11 +65,14 @@
 
         <div class="mb-3">
           <label for="exampleInputEmail1" id="formtitle">Situation</label>
-          <input type="email" class="form-control" id="InputEmail" placeholder="There's always a Batman ready to deploy">
+          <textarea type="text" class="form-control" id="InputEmail" placeholder="There's always a Batman ready to deploy" 
+            rows="3"></textarea>
         </div>
-​
-        <button type="submit" class="btn btn-warning" onclick="loadMap()">Send Bat Signal</button>
-    
+​         
+        <div id="submitButton">
+          <img src="/Images/Batman logo (layers)_4.gif" onclick="loadMap()" width="400px"> </a>
+        </div>
+
       </form>
     </div>
   </div>
