--- a/src/home.html
+++ b/src/home.html
@@ -70,7 +70,7 @@
         </div>
 ​         
         <div id="submitButton">
-          <img src="/Images/Batman logo (layers)_4.gif" onclick="loadMap()" width="400px"> </a>
+          <button type="submit" src="/Images/Batman logo (layers)_4.gif" onclick="loadMap()" width="400px"> </a>
         </div>
 
       </form>
