--- a/src/home.html
+++ b/src/home.html
@@ -89,7 +89,9 @@
         <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif">
       </form>
       </div>
+      <button id="joinbutton">Be a Batman</button>
     </div>
+    
   </div>
 
 
